--- a/Dex/Dex/Dex.vbproj
+++ b/Dex/Dex/Dex.vbproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{73B21CA5-63B0-4318-9833-173ADD7DCF26}</ProjectGuid>
+    <ProjectGuid>{5BE1090D-2E59-4196-8AD6-2DF4F72C299A}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <StartupObject>menus.My.MyApplication</StartupObject>
-    <RootNamespace>menus</RootNamespace>
-    <AssemblyName>menus</AssemblyName>
+    <StartupObject>Dex.My.MyApplication</StartupObject>
+    <RootNamespace>Dex</RootNamespace>
+    <AssemblyName>Dex</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <MyType>WindowsForms</MyType>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
@@ -22,7 +22,7 @@
     <DefineDebug>true</DefineDebug>
     <DefineTrace>true</DefineTrace>
     <OutputPath>bin\Debug\</OutputPath>
-    <DocumentationFile>menus.xml</DocumentationFile>
+    <DocumentationFile>Dex.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
@@ -32,7 +32,7 @@
     <DefineTrace>true</DefineTrace>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
-    <DocumentationFile>menus.xml</DocumentationFile>
+    <DocumentationFile>Dex.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
   <PropertyGroup>
