--- a/clothe shop/clothe shop/clothe shop.vbproj
+++ b/clothe shop/clothe shop/clothe shop.vbproj
@@ -104,6 +104,12 @@
     <Compile Include="Form5.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Form6.Designer.vb">
+      <DependentUpon>Form6.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Form6.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -135,6 +141,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form5.resx">
       <DependentUpon>Form5.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form6.resx">
+      <DependentUpon>Form6.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
@@ -172,6 +181,45 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Shirt 1.jfif" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\shirt 2.jfif" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\shirt 3.jfif" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\shirt 4.jfif" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\shirt 5.jfif" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\shirt 6.jfif" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\shirt 7.jfif" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\shirt 8.jfif" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\shirt 9.jfif" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\shirt 10.jfif" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\shirt 11.jfif" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\shirt 12.jfif" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\shirt 101.jfif" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\shirt 111.jfif" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
